--- a/front_multi/src/app/views/auth/login/login.component.html
+++ b/front_multi/src/app/views/auth/login/login.component.html
@@ -64,7 +64,7 @@
               <input type="checkbox" class="form-check-input" id="remember" formControlName="remember">
               <label class="form-check-label" for="remember">Se souvenir de moi</label>
             </div>
-            <a href="#" class="forgot-password">Mot de passe oublié?</a>
+            <a routerLink="/auth/forgot-password" class="forgot-password">Mot de passe oublié?</a>
           </div>
 
           <button 
